[package]
name = "event-server"
version = "0.1.0"
authors = ["Lalo Martins <lalo.martins@gmail.com>"]
edition = "2018"

[[bin]]
name = "event-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.30"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.2"

[build-dependencies]
tonic-build = "0.2"
