[package]
name = "event-server"
version = "0.1.0"
authors = ["Lalo Martins <lalo.martins@gmail.com>"]
edition = "2018"

[[bin]]
name = "event-server"
path = "src/main.rs"

[dependencies]
async-stream = "0.2.1"
async-trait = "0.1.30"
futures-core = "0.3.4"
futures-util = "0.3.4"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["macros", "signal"] }
tonic = "0.2"

[build-dependencies]
tonic-build = "0.2"
