[tool.poetry]
name = "event-server"
version = "0.1.0"
description = ""
authors = ["Lalo Martins <lalo.martins@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
bumpversion = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
